--- a/assets/css/style_old.css
+++ b/assets/css/style_old.css
@@ -165,11 +165,6 @@
   opacity: 0;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
-.strips .skill {
-  margin: 0 auto;
-  width: 60%;
-  height: 100vh;
-}
 .strips__strip--expanded {
   width: 100%;
   top: 0 !important;
@@ -317,8 +312,8 @@ p {
 }
 
 .container-ex {
-  overflow: scroll;
-  height: 90vh;
+  overflow: auto;
+  height: 100vh;
 }
 
 /*# sourceMappingURL=style_old.css.map */
